backend/error9.log
node : file:///D:/interpreparation
/backend/src/services/resumeServic
e.js:1
At line:1 char:1
+ node src/server.js 2>&1 | 
Out-File -Encoding utf8 error9.log
+ ~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo              : 
NotSpecified: (file://    
/D:/inte...umeService.js    
:1:String) [], RemoteExc    eption
    + FullyQualifiedErrorId     : 
NativeCommandError
 
import pdfParse from 'pdf-parse';
       ^^^^^^^^
SyntaxError: The requested module 
'pdf-parse' does not provide an 
export named 'default'
    at #asyncInstantiate (node:int
ernal/modules/esm/module_job:302:2
1)
    at async ModuleJob.run (node:i
nternal/modules/esm/module_job:405
:5)
    at async 
onImport.tracePromise.__proto__ (n
ode:internal/modules/esm/loader:66
0:26)
    at async 
asyncRunEntryPointWithESMLoader (n
ode:internal/modules/run_main:101:
5)

Node.js v24.12.0
